[gd_scene load_steps=8 format=3 uid="uid://q8dop7ptkrrt"]

[ext_resource type="PackedScene" uid="uid://yyn8cphdrudr" path="res://scenes/hud_scene/hud.tscn" id="1_sneet"]
[ext_resource type="Script" uid="uid://cyi2pw0msc3yw" path="res://scripts/gdscript/debug_player/debug_player.gd" id="1_w8ad2"]
[ext_resource type="Script" uid="uid://dhygm7mtupnoy" path="res://scripts/gdscript/debug_player/debug_camera_player.gd" id="2_kw14p"]
[ext_resource type="Script" uid="uid://j6udfypkqvrm" path="res://scripts/gdscript/weapon/weapon.gd" id="4_rf8gt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kw14p"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ggsmx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_w8ad2"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_w8ad2")

[node name="HUD" parent="." instance=ExtResource("1_sneet")]

[node name="MeshTestPlayer" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_kw14p")

[node name="CollisionPlayer" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ggsmx")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CameraPlayer" type="Camera3D" parent="CameraPivot"]
current = true
script = ExtResource("2_kw14p")

[node name="weapon_holder" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65, -0.45, -1)

[node name="Weapon" type="Node3D" parent="CameraPivot/weapon_holder"]
script = ExtResource("4_rf8gt")

[node name="GroundCheck" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_w8ad2")
