# PlayerController.gd - Enhanced Momentum System
extends CharacterBody3D

# --- –ü–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–≤–∏–∂–µ–Ω–∏—è ---
@export_group("Movement")
@export var walk_speed := 10.0
@export var sprint_speed := 15.0
@export var jump_velocity := 9.0
@export var acceleration := 10.0
@export var friction := 10.0
@export var air_acceleration := 5.0
@export var air_friction := 2.0

# --- –£–õ–£–ß–®–ï–ù–ù–ê–Ø –°–ò–°–¢–ï–ú–ê BUNNY HOP ---
@export_group("Momentum & Bunny Hop")
@export var bunny_hop_enabled := true
@export var momentum_preservation := 0.92  # —Å–æ—Ö—Ä–∞–Ω—è–µ–º 92% —Å–∫–æ—Ä–æ—Å—Ç–∏
@export var max_bunny_speed := 25.0        # –º–∞–∫—Å–∏–º–∞–ª—å–Ω–∞—è —Å–∫–æ—Ä–æ—Å—Ç—å –æ—Ç bunny hop
@export var air_strafe_power := 1.8        # —Å–∏–ª–∞ –≤–æ–∑–¥—É—à–Ω–æ–≥–æ —Å—Ç—Ä–µ–π—Ñ–∞
@export var pre_speed_cap := 30.0          # –ª–∏–º–∏—Ç —Å–∫–æ—Ä–æ—Å—Ç–∏ –¥–æ –ø—Ä—ã–∂–∫–∞
@export var landing_speed_bonus := 1.15    # 15% –±–æ–Ω—É—Å –ø—Ä–∏ –∏–¥–µ–∞–ª—å–Ω–æ–º –ø—Ä–∏–∑–µ–º–ª–µ–Ω–∏–∏
@export var perfect_landing_window := 0.1  # –æ–∫–Ω–æ –¥–ª—è perfect landing (—Å–µ–∫)

@export_group("Camera")
@export var mouse_sensitivity := 0.003
@export var max_look_angle := 90.0 
@export var crouch_height_normal := 1.5
@export var crouch_height_crouched := 0.5
@export var collision_height_ratio := 0.5

@export_group("Arena Settings")
@export var max_air_speed := 15.0
@export var slide_fov_bonus := 20.0
@export var momentum_chain_multiplier := 1.3

@export_group("Lean")
@export var max_lean_angle: float = 25.0
@export var lean_speed: float = 8.0
@export var lean_return_speed: float = 6.0

@export_group("Weapon System")
@export var weapon_holder: Node3D 
@export var weapon_scenes: Array[PackedScene] = []

@export_group("Quick Turn")
@export var quick_turn_enabled := true
@export var turn_duration := 0.8
@export var turn_fov_boost := 25.0


# === –í–°–ï –ü–ï–†–ï–ú–ï–ù–ù–´–ï –°–û–°–¢–û–Ø–ù–ò–Ø ===
# Momentum —Å–∏—Å—Ç–µ–º–∞
var momentum_vector := Vector3.ZERO
var last_ground_speed := 0.0
var air_time := 0.0
var perfect_landing_available := false
var consecutive_jumps := 0
var speed_at_jump := 0.0

# Lean —Å–∏—Å—Ç–µ–º–∞
var current_lean: float = 0.0
var target_lean: float = 0.0

# Weapon —Å–∏—Å—Ç–µ–º–∞
var current_weapon: Weapon
var current_weapon_index: int = 0

# Quick Turn —Å–∏—Å—Ç–µ–º–∞
var is_quick_turning := false
var quick_turn_timer := 0.0
var sprint_time := 0.0
var min_sprint_time_for_slide := 1.5
var jump_held := false
var turn_cooldown := 0.0
var turn_cooldown_duration := 1.0



# === –°–ò–°–¢–ï–ú–ê –ó–ê–†–Ø–ñ–ï–ù–ù–û–ì–û –ü–†–´–ñ–ö–ê ===
var jump_charge_time := 0.0  # —Ç–µ–∫—É—â–µ–µ –≤—Ä–µ–º—è –∑–∞—Ä—è–¥–∫–∏
var jump_charge_max_time := 1.5  # –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –≤—Ä–µ–º—è –∑–∞—Ä—è–¥–∫–∏ (—Å–µ–∫—É–Ω–¥—ã)
var jump_charge_min_velocity := 9.0  # –º–∏–Ω–∏–º–∞–ª—å–Ω–∞—è –≤—ã—Å–æ—Ç–∞ –ø—Ä—ã–∂–∫–∞ (–±–µ–∑ –∑–∞—Ä—è–¥–∫–∏)
var jump_charge_max_velocity := 14.0  # –º–∞–∫—Å–∏–º–∞–ª—å–Ω–∞—è –≤—ã—Å–æ—Ç–∞ –ø—Ä—ã–∂–∫–∞ (–ø–æ–ª–Ω–∞—è –∑–∞—Ä—è–¥–∫–∞)
var jump_charge_camera_dip := 0.75  # –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –æ–ø—É—Å–∫–∞–Ω–∏–µ –∫–∞–º–µ—Ä—ã
var jump_charge_camera_speed := 8.0  # —Å–∫–æ—Ä–æ—Å—Ç—å –æ–ø—É—Å–∫–∞–Ω–∏—è –∫–∞–º–µ—Ä—ã
var jump_charge_camera_return_speed := 12.0  # —Å–∫–æ—Ä–æ—Å—Ç—å –≤–æ–∑–≤—Ä–∞—Ç–∞ –∫–∞–º–µ—Ä—ã
var jump_charge_current_offset := 0.0  # —Ç–µ–∫—É—â–µ–µ —Å–º–µ—â–µ–Ω–∏–µ –∫–∞–º–µ—Ä—ã

var jump_timer: Timer
var jump_hud_shown := false

# –û—Å–Ω–æ–≤–Ω—ã–µ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã–µ —Å–æ—Å—Ç–æ—è–Ω–∏—è
var gravity: float = ProjectSettings.get_setting("physics/3d/default_gravity")
var can_double_jump := false
var is_double_jumping := false
var is_sprinting := false
var landing_timer := 0.0
var previous_floor_state := false
var landing_camera_offset: float = 0.0
var camera_landing_transform: Transform3D
var is_landing_active: bool = false

# Crouch –∏ slide —Å–∏—Å—Ç–µ–º–∞
var is_crouching := false
var is_sliding := false
var slide_timer := 0.0
var crouch_speed := 4.0
var slide_cooldown := 0.0
var slide_cooldown_duration := 0.3
var crouch_toggled := false
var slide_duration := 2.0
var slide_speed := 25.0
var slide_friction := 8.0
var collision_height_normal: float
var collision_height_crouched: float

var slide_momentum := Vector3.ZERO
var slide_fov_active := false
var slide_camera_roll := 0.0
var slide_direction_x := 0.0
var camera_base_position: Vector3
var dash_visual_offset := Vector3.ZERO
var dash_visual_active := false

# –°—Å—ã–ª–∫–∏ –Ω–∞ —É–∑–ª—ã
@onready var camera_pivot: Node3D = $CameraPivot
@onready var camera_controller: CameraController = $CameraPivot/CameraPlayer
@onready var ground_check: ShapeCast3D = $GroundCheck
@onready var collision_shape: CollisionShape3D = $CollisionPlayer
#@onready var wall_check_left: ShapeCast3D = $WallCheckLeft
#@onready var wall_check_right: ShapeCast3D = $WallCheckRight

var ammo_frame

func _ready() -> void:
	camera_base_position = camera_pivot.position
	camera_landing_transform = camera_pivot.transform
	Input.set_mouse_mode(Input.MOUSE_MODE_CAPTURED)
	_spawn_weapon(0)
	
	if camera_controller:
		camera_controller.player = self
		print("‚úÖ Camera controller connected")
	else:
		push_error("‚ùå CameraController not found! Check node path.")
		
	if collision_shape and collision_shape.shape is CapsuleShape3D:
		var capsule = collision_shape.shape as CapsuleShape3D
		collision_height_normal = capsule.height
		collision_height_crouched = collision_height_normal * collision_height_ratio

func _physics_process(delta: float) -> void:
	_handle_sprint_state()
	_handle_gravity_and_jumps(delta)
	_handle_enhanced_movement(delta)
	_handle_lean(delta)
	_update_camera_states()
	_handle_crouch_state(delta)
	
	if turn_cooldown > 0:
		turn_cooldown -= delta

	move_and_slide()

# === –ù–û–í–ê–Ø –£–õ–£–ß–®–ï–ù–ù–ê–Ø –°–ò–°–¢–ï–ú–ê –î–í–ò–ñ–ï–ù–ò–Ø ===
func _handle_enhanced_movement(delta: float) -> void:
	var input_dir = Input.get_vector("move_left", "move_right", "move_forward", "move_backward")
	var direction = (transform.basis * Vector3(input_dir.x, 0, input_dir.y)).normalized()
	
	var current_speed = sprint_speed if is_sprinting else walk_speed
	var current_accel = acceleration
	var current_friction = friction
	
	if is_crouching:
		current_speed = crouch_speed
	
	# === –£–õ–£–ß–®–ï–ù–ù–û–ï –í–û–ó–î–£–®–ù–û–ï –î–í–ò–ñ–ï–ù–ò–ï ===
	if not is_on_floor():
		air_time += delta
		_handle_air_movement(delta, input_dir, direction)
	else:
		# === –£–õ–£–ß–®–ï–ù–ù–û–ï –ù–ê–ó–ï–ú–ù–û–ï –î–í–ò–ñ–ï–ù–ò–ï ===
		air_time = 0.0
		_handle_ground_movement(delta, direction, current_speed, current_accel, current_friction)

func _handle_air_movement(delta: float, input_dir: Vector2, direction: Vector3) -> void:
	if not bunny_hop_enabled:
		# –û–±—ã—á–Ω–æ–µ –≤–æ–∑–¥—É—à–Ω–æ–µ –¥–≤–∏–∂–µ–Ω–∏–µ
		if direction.length() > 0 and not is_sliding:
			velocity.x = move_toward(velocity.x, direction.x * (sprint_speed if is_sprinting else walk_speed), air_acceleration * delta)
			velocity.z = move_toward(velocity.z, direction.z * (sprint_speed if is_sprinting else walk_speed), air_acceleration * delta)
		return
	
	# === –ü–†–û–î–í–ò–ù–£–¢–´–ô AIR STRAFING ===
	if input_dir.length() > 0.1:
		var wish_dir = direction
		var current_vel = Vector3(velocity.x, 0, velocity.z)
		var current_speed = current_vel.length()
		
		# –ü—Ä–æ–µ–∫—Ü–∏—è —Ç–µ–∫—É—â–µ–π —Å–∫–æ—Ä–æ—Å—Ç–∏ –Ω–∞ –∂–µ–ª–∞–µ–º–æ–µ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ
		var vel_dot_wish = current_vel.dot(wish_dir)
		
		# Air strafing - –¥–æ–±–∞–≤–ª—è–µ–º —Å–∫–æ—Ä–æ—Å—Ç—å –ø–µ—Ä–ø–µ–Ω–¥–∏–∫—É–ª—è—Ä–Ω–æ –∫ —Ç–µ–∫—É—â–µ–º—É –¥–≤–∏–∂–µ–Ω–∏—é
		var accel_amount = air_acceleration * air_strafe_power * delta
		
		# –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º —É—Å–∫–æ—Ä–µ–Ω–∏–µ –µ—Å–ª–∏ —É–∂–µ –¥–≤–∏–≥–∞–µ–º—Å—è –±—ã—Å—Ç—Ä–æ –≤ —ç—Ç–æ–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–∏
		if vel_dot_wish > 0:
			accel_amount *= max(0.1, 1.0 - (vel_dot_wish / max_air_speed))
		
		# –ü—Ä–∏–º–µ–Ω—è–µ–º —É—Å–∫–æ—Ä–µ–Ω–∏–µ
		var new_velocity = current_vel + wish_dir * accel_amount
		
		# –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –º–∞–∫—Å–∏–º–∞–ª—å–Ω—É—é —Å–∫–æ—Ä–æ—Å—Ç—å –≤ –≤–æ–∑–¥—É—Ö–µ
		if new_velocity.length() > max_air_speed and current_speed < max_air_speed:
			new_velocity = new_velocity.normalized() * max_air_speed
		
		velocity.x = new_velocity.x
		velocity.z = new_velocity.z
		
		# –î–ï–ë–ê–ì –¥–ª—è –≤–æ–∑–¥—É—à–Ω–æ–≥–æ –¥–≤–∏–∂–µ–Ω–∏—è
		if Input.is_action_just_pressed("debug_info"):
			print("üå™Ô∏è AIR STRAFE - Speed: %.1f | Dot: %.2f | Accel: %.2f" % [
				current_speed, vel_dot_wish, accel_amount
			])
	
	# –ù–µ–±–æ–ª—å—à–æ–µ —Ç—Ä–µ–Ω–∏–µ –≤ –≤–æ–∑–¥—É—Ö–µ –¥–ª—è –∫–æ–Ω—Ç—Ä–æ–ª—è
	var air_drag = 0.98
	velocity.x *= air_drag
	velocity.z *= air_drag

func _handle_ground_movement(delta: float, direction: Vector3, current_speed: float, current_accel: float, current_friction: float) -> void:
	if direction.length() > 0 and not is_sliding:
		var target_vel = direction * current_speed
		var current_horizontal = Vector3(velocity.x, 0, velocity.z)
		
		# === MOMENTUM PRESERVATION ===
		if bunny_hop_enabled and consecutive_jumps > 0:
			# –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–º–ø—É–ª—å—Å –æ—Ç –ø—Ä–µ–¥—ã–¥—É—â–∏—Ö –ø—Ä—ã–∂–∫–æ–≤
			var preserved_speed = last_ground_speed * momentum_preservation
			
			if preserved_speed > current_speed:
				# –°–º–µ—à–∏–≤–∞–µ–º —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω—É—é —Å–∫–æ—Ä–æ—Å—Ç—å —Å –Ω–æ–≤—ã–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ–º
				var momentum_influence = min(preserved_speed / current_speed, 2.5)  # –º–∞–∫—Å 250% —Å–∫–æ—Ä–æ—Å—Ç–∏
				target_vel = target_vel * momentum_influence
				
				# –ü–ª–∞–≤–Ω—ã–π –ø–µ—Ä–µ—Ö–æ–¥ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏—è –¥–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è —Å–∫–æ—Ä–æ—Å—Ç–∏
				var direction_change = direction.dot(momentum_vector.normalized())
				if direction_change > 0.3:  # –µ—Å–ª–∏ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏—è —Å—Ö–æ–∂–∏
					target_vel = momentum_vector.lerp(target_vel, 0.7)
				
				print("üèÉ MOMENTUM PRESERVED - Speed: %.1f ‚Üí %.1f | Jumps: %d" % [
					current_horizontal.length(), target_vel.length(), consecutive_jumps
				])
		
		# –ü—Ä–∏–º–µ–Ω—è–µ–º –¥–≤–∏–∂–µ–Ω–∏–µ
		velocity.x = move_toward(velocity.x, target_vel.x, current_accel * delta)
		velocity.z = move_toward(velocity.z, target_vel.z, current_accel * delta)
		
		# –°–æ—Ö—Ä–∞–Ω—è–µ–º —Ç–µ–∫—É—â—É—é —Å–∫–æ—Ä–æ—Å—Ç—å –¥–ª—è —Å–ª–µ–¥—É—é—â–µ–≥–æ –ø—Ä—ã–∂–∫–∞
		last_ground_speed = Vector3(velocity.x, 0, velocity.z).length()
		momentum_vector = Vector3(velocity.x, 0, velocity.z)
		
	elif not is_sliding:
		# –ü—Ä–∏–º–µ–Ω—è–µ–º —Ç—Ä–µ–Ω–∏–µ
		velocity.x = move_toward(velocity.x, 0.0, current_friction * delta)
		velocity.z = move_toward(velocity.z, 0.0, current_friction * delta)
		
		# –°–±—Ä–∞—Å—ã–≤–∞–µ–º —Å—á–µ—Ç—á–∏–∫ –ø—Ä—ã–∂–∫–æ–≤ –µ—Å–ª–∏ –æ—Å—Ç–∞–Ω–æ–≤–∏–ª–∏—Å—å
		if Vector3(velocity.x, 0, velocity.z).length() < 1.0:
			consecutive_jumps = 0
			sprint_time = 0.0  # —Å–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Ä–µ–º—è —Å–ø—Ä–∏–Ω—Ç–∞ –ø—Ä–∏ –æ—Å—Ç–∞–Ω–æ–≤–∫–µ

func _handle_crouch_state(delta: float) -> void:
	var crouch_input = Input.is_action_pressed("crouch")

	if crouch_input and not is_crouching:
		_start_crouch()
	elif not crouch_input and is_crouching:
		_stop_crouch()

func _start_crouch() -> void:
	is_crouching = true
	is_sprinting = false  # –Ω–µ–ª—å–∑—è —Å–ø—Ä–∏–Ω—Ç–æ–≤–∞—Ç—å –≤–æ –≤—Ä–µ–º—è –ø—Ä–∏—Å–µ–¥–∞

	if collision_shape and collision_shape.shape is CapsuleShape3D:
		var capsule = collision_shape.shape as CapsuleShape3D
		capsule.height = collision_height_crouched

	# –ö–∞–º–µ—Ä–∞ –Ω–µ–º–Ω–æ–≥–æ –æ–ø—É—Å–∫–∞–µ—Ç—Å—è
	var tween = get_tree().create_tween()
	tween.tween_property(camera_pivot, "position:y", crouch_height_crouched, 0.15)

func _stop_crouch() -> void:
	# –ü—Ä–æ–≤–µ—Ä–∫–∞, –º–æ–∂–Ω–æ –ª–∏ –≤—Å—Ç–∞—Ç—å (–Ω–µ—Ç –ª–∏ –ø–æ—Ç–æ–ª–∫–∞)
	var space_above = !test_move(transform, Vector3.UP * (collision_height_normal - collision_height_crouched))
	if not space_above:
		return  # –Ω–µ –≤—Å—Ç–∞—ë–º, –µ—Å–ª–∏ —Å–≤–µ—Ä—Ö—É –ø—Ä–µ–ø—è—Ç—Å—Ç–≤–∏–µ

	is_crouching = false
	if collision_shape and collision_shape.shape is CapsuleShape3D:
		var capsule = collision_shape.shape as CapsuleShape3D
		capsule.height = collision_height_normal

	# –ö–∞–º–µ—Ä–∞ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç—Å—è –æ–±—Ä–∞—Ç–Ω–æ
	var tween = get_tree().create_tween()
	tween.tween_property(camera_pivot, "position:y", crouch_height_normal, 0.15)

func _handle_gravity_and_jumps(delta: float) -> void:
	var was_on_floor = previous_floor_state
	var is_on_floor_now = is_on_floor()
	
	# –ì—Ä–∞–≤–∏—Ç–∞—Ü–∏—è
	if not is_on_floor_now:
		velocity.y -= gravity * delta
		velocity.y = max(velocity.y, -25.0)
	
	# –ü—Ä–∏–∑–µ–º–ª–µ–Ω–∏–µ
	if is_on_floor_now and not was_on_floor:
		_handle_landing()
	
	if Input.is_action_just_pressed("jump") and is_on_floor():
		_perform_jump()

func _perform_jump() -> void:
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Ä–µ–º—è —Å–ø—Ä–∏–Ω—Ç–∞ –ø—Ä–∏ –ø—Ä—ã–∂–∫–µ
	sprint_time = 0.0
	
	# –°–æ—Ö—Ä–∞–Ω—è–µ–º —Å–∫–æ—Ä–æ—Å—Ç—å –ø–µ—Ä–µ–¥ –ø—Ä—ã–∂–∫–æ–º
	speed_at_jump = Vector3(velocity.x, 0, velocity.z).length()
	
	# Pre-speed: –µ—Å–ª–∏ –¥–≤–∏–≥–∞–µ–º—Å—è –±—ã—Å—Ç—Ä–æ, –¥–∞–µ–º –±–æ–ª—å—à–µ –≤—ã—Å–æ—Ç—ã
	var jump_height = jump_velocity
	if bunny_hop_enabled and speed_at_jump > sprint_speed:
		var speed_bonus = min((speed_at_jump - sprint_speed) / sprint_speed, 1.0)
		jump_height += speed_bonus * 2.0  # –¥–æ +2 –µ–¥–∏–Ω–∏—Ü –≤—ã—Å–æ—Ç—ã
		print("üöÄ PRE-SPEED JUMP! Speed: %.1f | Bonus height: +%.1f" % [
			speed_at_jump, speed_bonus * 2.0
		])
	
	velocity.y = jump_height
	can_double_jump = true
	consecutive_jumps += 1
	perfect_landing_available = true
	
	if camera_controller:
		camera_controller.add_trauma(0.1)
	
	print("ü¶ò JUMP #%d | Speed: %.1f" % [consecutive_jumps, speed_at_jump])


func _handle_landing() -> void:
	# Perfect Landing –±–æ–Ω—É—Å
	if bunny_hop_enabled and perfect_landing_available and consecutive_jumps > 1:
		var current_speed = Vector3(velocity.x, 0, velocity.z).length()
		var bonus_speed = current_speed * (landing_speed_bonus - 1.0)
		
		# –ü—Ä–∏–º–µ–Ω—è–µ–º –±–æ–Ω—É—Å –≤ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–∏ –¥–≤–∏–∂–µ–Ω–∏—è
		if current_speed > 0.1:
			var direction = Vector3(velocity.x, 0, velocity.z).normalized()
			velocity.x += direction.x * bonus_speed
			velocity.z += direction.z * bonus_speed
			
			print("‚≠ê PERFECT LANDING! Speed: %.1f ‚Üí %.1f (+%.1f)" % [
				current_speed, Vector3(velocity.x, 0, velocity.z).length(), bonus_speed
			])
			
			if camera_controller:
				# –°–ø–µ—Ü–∏–∞–ª—å–Ω—ã–π —ç—Ñ—Ñ–µ–∫—Ç –¥–ª—è perfect landing
				camera_controller.add_trauma(0.2)
				var tween = get_tree().create_tween()
				tween.tween_property(camera_controller, "fov", camera_controller.fov + 5, 0.1)
				tween.tween_property(camera_controller, "fov", camera_controller.fov_normal, 0.3)
	
	perfect_landing_available = false

# === –î–ï–ë–ê–ì –§–£–ù–ö–¶–ò–ò ===
func _print_debug_info() -> void:
	var horizontal_speed = Vector3(velocity.x, 0, velocity.z).length()
	print("=== MOVEMENT DEBUG ===")
	print("üèÉ Current Speed: %.1f (%.1f%% of max bunny)" % [
		horizontal_speed, (horizontal_speed / max_bunny_speed) * 100.0
	])
	print("ü¶ò Consecutive Jumps: %d" % consecutive_jumps)
	print("üìä Last Ground Speed: %.1f" % last_ground_speed)
	print("‚è±Ô∏è Air Time: %.2f sec" % air_time)
	print("‚ú® Perfect Landing: %s" % ("‚úÖ" if perfect_landing_available else "‚ùå"))
	print("üè† On Floor: %s | DoubleJump: %s | Sprint: %s" % [
		"‚úÖ" if is_on_floor() else "‚ùå",
		"‚úÖ" if can_double_jump else "‚ùå",
		"‚úÖ" if is_sprinting else "‚ùå"
	])
	print("üéØ Momentum Vector: (%.1f, %.1f)" % [momentum_vector.x, momentum_vector.z])

# === –û–°–ù–û–í–ù–´–ï –§–£–ù–ö–¶–ò–ò ===
func _handle_sprint_state() -> void:
	var new_sprint_state = Input.is_action_pressed("sprint")
	if new_sprint_state != is_sprinting:
		is_sprinting = new_sprint_state
		if is_sprinting:
			sprint_time = 0.0  # —Å–±—Ä–∞—Å—ã–≤–∞–µ–º —Ç–∞–π–º–µ—Ä –ø—Ä–∏ –Ω–∞—á–∞–ª–µ —Å–ø—Ä–∏–Ω—Ç–∞
		if camera_controller:
			camera_controller.set_sprinting(is_sprinting)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –≤—Ä–µ–º—è —Å–ø—Ä–∏–Ω—Ç–∞
	if is_sprinting:
		sprint_time += get_process_delta_time()
	else:
		sprint_time = 0.0  # —Å–±—Ä–∞—Å—ã–≤–∞–µ–º –µ—Å–ª–∏ –Ω–µ —Å–ø—Ä–∏–Ω—Ç–∏–º

func _input(event: InputEvent) -> void:
	# –ë–ª–æ–∫–∏—Ä—É–µ–º –º—ã—à—å –≤–æ –≤—Ä–µ–º—è quick turn
	if is_quick_turning and event is InputEventMouseMotion:
		return
		
	if event is InputEventMouseMotion and Input.get_mouse_mode() == Input.MOUSE_MODE_CAPTURED:
		rotate_y(-event.relative.x * mouse_sensitivity)
		camera_pivot.rotate_x(-event.relative.y * mouse_sensitivity)
		camera_pivot.rotation_degrees.x = clamp(camera_pivot.rotation_degrees.x, -max_look_angle, max_look_angle)
	
	if not is_landing_active:
				camera_landing_transform = camera_controller.transform
		
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_WHEEL_UP:
			_switch_weapon(1)
		elif event.button_index == MOUSE_BUTTON_WHEEL_DOWN:
			_switch_weapon(-1)
	
	var s_held = Input.is_action_pressed("move_backward")
	if event.is_action_pressed("jump") and s_held and turn_cooldown <= 0:
		print("TRYING QUICK TURN! (S held + Jump pressed)")
		_try_quick_turn()
		turn_cooldown = turn_cooldown_duration
	
	if event.is_action_pressed("debug_info"):
		_print_debug_info()
		

func _update_camera_states() -> void:
	if not camera_controller:
		return
	camera_controller.set_sprinting(is_sprinting)
	camera_controller.set_aiming(Input.is_action_pressed("aim"))
	camera_controller.set_crouching(is_crouching or is_sliding)

func _check_landing_effects() -> void:
	if not camera_controller:
		return
		
	var was_in_air = not previous_floor_state
	var landed = was_in_air and is_on_floor()
	
	if landed:
		var fall_speed = abs(velocity.y)
		
		if fall_speed > 5.0:
			_create_landing_effect(fall_speed * 0.1)
		elif fall_speed > 15.0:
			_create_landing_effect(fall_speed * 0.15)
		elif is_double_jumping:
			_create_landing_effect(1.4)

func _create_landing_effect(intensity: float) -> void:
	if not camera_controller:
		return
	
	is_landing_active = true
	var drop_amount = intensity * 1.2
	var original_pos = camera_controller.position
	
	var tween = get_tree().create_tween()
	tween.tween_property(camera_controller, "position:y", original_pos.y - drop_amount, 0.08)
	tween.tween_property(camera_controller, "position:y", original_pos.y, 0.4).set_trans(Tween.TRANS_BACK)
	tween.tween_callback(func(): is_landing_active = false)
	
	camera_controller.add_trauma(intensity * 0.5)

func _update_camera_lean(delta: float) -> void:
	# –ù–ï –æ–±–Ω–æ–≤–ª—è–µ–º lean –≤–æ –≤—Ä–µ–º—è quick turn
	if is_quick_turning:
		return
		
	var can_lean = (not is_sprinting and is_on_floor()) or is_sliding
	
	if can_lean:
		if Input.is_action_pressed("lean_left"):
			target_lean = -max_lean_angle
		elif Input.is_action_pressed("lean_right"):
			target_lean = max_lean_angle
		else:
			target_lean = 0.0
	else:
		target_lean = 0.0
	
	var speed = lean_speed if target_lean != 0.0 else lean_return_speed
	current_lean = lerp(current_lean, target_lean, delta * speed)
	rotation_degrees.z = current_lean


func _switch_weapon(dir: int) -> void:
	if weapon_scenes.is_empty():
		return

	current_weapon_index += dir
	current_weapon_index = clampi(current_weapon_index, 0, weapon_scenes.size() - 1)
	_spawn_weapon(current_weapon_index)

func _spawn_weapon(index: int) -> void:
	if current_weapon:
		if current_weapon.has_method("reset_recoil"):
			current_weapon.reset_recoil()
		current_weapon.queue_free()
	if weapon_scenes.is_empty():
		return
		
	var weapon_instance = weapon_scenes[index].instantiate()
	weapon_holder.add_child(weapon_instance)
	current_weapon = weapon_instance

func get_aim_target() -> Vector3:
	var viewport_center = get_viewport().get_visible_rect().size / 2.0
	var ray_length = 2000.0
	var ray_origin = camera_controller.project_ray_origin(viewport_center)
	var ray_direction = camera_controller.project_ray_normal(viewport_center)
	var ray_end = ray_origin + ray_direction * ray_length
	
	var query = PhysicsRayQueryParameters3D.create(ray_origin, ray_end)
	query.exclude = [self]
	var result = get_world_3d().direct_space_state.intersect_ray(query)
	return result.position if result else ray_end

# === QUICK TURN –§–£–ù–ö–¶–ò–ò ===
func _try_quick_turn() -> void:
	if not quick_turn_enabled or is_quick_turning:
		return
	
	_perform_quick_turn()

func _perform_quick_turn() -> void:
	print("üîÑ _perform_quick_turn STARTED")
	
	is_quick_turning = true
	quick_turn_timer = turn_duration
	
	var current_speed = Vector3(velocity.x, 0, velocity.z).length()
	var preserved_momentum = Vector3(velocity.x, 0, velocity.z)
	
	# –û–ø—Ä–µ–¥–µ–ª—è–µ–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –ø–æ–≤–æ—Ä–æ—Ç–∞
	var turn_direction = 1
	
	# === –≠–§–§–ï–ö–¢–ù–´–ô –ü–û–í–û–†–û–¢ –° –ö–†–ï–ù–û–ú ===
	var start_rotation = rotation_degrees.y
	var overshoot_rotation = start_rotation + (180 + 20) * turn_direction
	var final_rotation = start_rotation + 180 * turn_direction
	
	# –°–æ–∑–¥–∞–µ–º –æ—Ç–¥–µ–ª—å–Ω—ã–µ tween'—ã
	var main_tween = get_tree().create_tween()
	var body_tilt_tween = get_tree().create_tween()
	var camera_tween = get_tree().create_tween()
	
	# 1. –ü–û–í–û–†–û–¢ –¢–ï–õ–ê (Y-–æ—Å—å) - –æ—Å–Ω–æ–≤–Ω–æ–π –ø–æ–≤–æ—Ä–æ—Ç
	main_tween.tween_property(self, "rotation_degrees:y", 
		overshoot_rotation, turn_duration * 0.95).set_trans(Tween.TRANS_CUBIC)
	
	# –í–æ–∑–≤—Ä–∞—Ç –∫ —Ç–æ—á–Ω–æ–º—É —É–≥–ª—É
	main_tween.tween_property(self, "rotation_degrees:y", 
		final_rotation, turn_duration * 0.35).set_trans(Tween.TRANS_BACK)
	
	# 2. –ö–†–ï–ù –¢–ï–õ–ê (Z-–æ—Å—å)
	var tilt_amount = 15.0 * turn_direction
	body_tilt_tween.tween_property(self, "rotation_degrees:z", 
		tilt_amount, turn_duration * 0.3).set_trans(Tween.TRANS_CUBIC)
	body_tilt_tween.tween_property(self, "rotation_degrees:z", 
		0.0, turn_duration * 0.7).set_trans(Tween.TRANS_ELASTIC)
	
	# 3. –ö–ê–ú–ï–†–ù–´–ï –≠–§–§–ï–ö–¢–´
	if camera_controller:
		var original_fov = camera_controller.fov
		camera_tween.tween_property(camera_controller, "fov", 
			original_fov + turn_fov_boost, turn_duration * 0.4)
		camera_tween.tween_property(camera_controller, "fov", 
			original_fov, turn_duration * 0.6).set_trans(Tween.TRANS_BACK)
		
		camera_controller.add_trauma(0.4)
		
		# Roll –∫–∞–º–µ—Ä—ã (–æ—Ç–¥–µ–ª—å–Ω—ã–π tween)
		var camera_roll_tween = get_tree().create_tween()
		var camera_roll = -tilt_amount * 0.5
		camera_roll_tween.tween_property(camera_pivot, "rotation_degrees:z", 
			camera_roll, turn_duration * 0.3).set_trans(Tween.TRANS_CUBIC)
		camera_roll_tween.tween_property(camera_pivot, "rotation_degrees:z", 
			0.0, turn_duration * 0.7).set_trans(Tween.TRANS_ELASTIC)
	
	# –§–∏–Ω–∞–ª–∏–∑–∞—Ü–∏—è - –ø—Ä–∏–≤—è–∑—ã–≤–∞–µ–º –∫ –æ—Å–Ω–æ–≤–Ω–æ–º—É tween
	main_tween.tween_callback(func(): _finish_quick_turn(preserved_momentum, current_speed))
	
	print("üîÑ –≠—Ñ—Ñ–µ–∫—Ç–Ω—ã–π –ø–æ–≤–æ—Ä–æ—Ç: %d¬∞ ‚Üí %d¬∞ ‚Üí %d¬∞" % [start_rotation, overshoot_rotation, final_rotation])


func _handle_lean(delta: float) -> void:
	var lean_left = Input.is_action_pressed("lean_left")
	var lean_right = Input.is_action_pressed("lean_right")

	if lean_left and not lean_right:
		target_lean = max_lean_angle   # –Ω–∞–∫–ª–æ–Ω –≤–ª–µ–≤–æ
	elif lean_right and not lean_left:
		target_lean = -max_lean_angle    # –Ω–∞–∫–ª–æ–Ω –≤–ø—Ä–∞–≤–æ
	else:
		target_lean = 0.0               # –≤–æ–∑–≤—Ä–∞—â–∞–µ–º—Å—è –≤ —Ü–µ–Ω—Ç—Ä

	# –ø–ª–∞–≤–Ω—ã–π –ø–µ—Ä–µ—Ö–æ–¥ –∫ –Ω—É–∂–Ω–æ–º—É —É–≥–ª—É
	current_lean = lerp(current_lean, target_lean, delta * (lean_speed if target_lean != 0 else lean_return_speed))

	# –ø—Ä–∏–º–µ–Ω—è–µ–º –Ω–∞–∫–ª–æ–Ω –∫ –∫–∞–º–µ—Ä–µ
	if camera_pivot:
		camera_pivot.rotation_degrees.z = current_lean


func _finish_quick_turn(original_momentum: Vector3, original_speed: float) -> void:
	print("üîÑ TURN FINISHED - Final rotation: %.1f" % rotation_degrees.y)
	is_quick_turning = false
	rotation_degrees.z = 0.0
	
	if bunny_hop_enabled and original_speed > 5.0:
		var new_momentum = -original_momentum
		velocity.x = new_momentum.x
		velocity.z = new_momentum.z
		momentum_vector = new_momentum
		last_ground_speed = original_speed
		print("üîÑ Momentum reversed: %.1f" % original_speed)

# === –§–£–ù–ö–¶–ò–ò –î–õ–Ø UI –ò –°–¢–ê–¢–ò–°–¢–ò–ö–ò ===
func get_horizontal_speed() -> float:
	return Vector3(velocity.x, 0, velocity.z).length()

func get_total_speed() -> float:
	return velocity.length()

func get_momentum_info() -> Dictionary:
	return {
		"current_speed": get_horizontal_speed(),
		"last_ground_speed": last_ground_speed,
		"consecutive_jumps": consecutive_jumps,
		"air_time": air_time,
		"perfect_landing_available": perfect_landing_available,
		"momentum_vector": momentum_vector,
		"speed_percentage": (get_horizontal_speed() / max_bunny_speed) * 100.0
	}

# === –§–£–ù–ö–¶–ò–ò –î–õ–Ø –ù–ê–°–¢–†–û–ô–ö–ò –ò –ë–ê–õ–ê–ù–°–ò–†–û–í–ö–ò ===
func set_bunny_hop_settings(enabled: bool, preservation: float = 0.92, max_speed: float = 25.0) -> void:
	bunny_hop_enabled = enabled
	momentum_preservation = preservation
	max_bunny_speed = max_speed
	print("üê∞ Bunny hop settings updated: Enabled=%s, Preservation=%.2f, Max Speed=%.1f" % [
		enabled, preservation, max_speed
	])

func reset_momentum() -> void:
	"""–°–±—Ä–∞—Å—ã–≤–∞–µ—Ç –≤—Å—é –Ω–∞–∫–æ–ø–ª–µ–Ω–Ω—É—é —Å–∫–æ—Ä–æ—Å—Ç—å (–¥–ª—è —Ä–µ—Å–ø–∞–≤–Ω–∞ –∏–ª–∏ —Ç–µ–ª–µ–ø–æ—Ä—Ç–∞—Ü–∏–∏)"""
	momentum_vector = Vector3.ZERO
	last_ground_speed = 0.0
	consecutive_jumps = 0
	perfect_landing_available = false
	air_time = 0.0
	print("üîÑ Momentum reset")

func add_speed_boost(boost_amount: float, duration: float = 0.0) -> void:
	"""–î–æ–±–∞–≤–ª—è–µ—Ç –≤—Ä–µ–º–µ–Ω–Ω—ã–π –±—É—Å—Ç —Å–∫–æ—Ä–æ—Å—Ç–∏"""
	var current_horizontal = Vector3(velocity.x, 0, velocity.z)
	if current_horizontal.length() > 0.1:
		var boost_direction = current_horizontal.normalized()
		velocity.x += boost_direction.x * boost_amount
		velocity.z += boost_direction.z * boost_amount
		
		# –û–±–Ω–æ–≤–ª—è–µ–º momentum —Å–∏—Å—Ç–µ–º—É
		momentum_vector = Vector3(velocity.x, 0, velocity.z)
		last_ground_speed = momentum_vector.length()
		
		print("‚ö° Speed boost: +%.1f | New speed: %.1f" % [
			boost_amount, Vector3(velocity.x, 0, velocity.z).length()
		])
		
		# –í—Ä–µ–º–µ–Ω–Ω—ã–π –±—É—Å—Ç —Å –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–º —Å–Ω–∏–∂–µ–Ω–∏–µ–º
		if duration > 0.0:
			var tween = get_tree().create_tween()
			tween.tween_delay(duration)
			tween.tween_callback(func(): _apply_speed_reduction(boost_amount))

func _apply_speed_reduction(reduction: float) -> void:
	var current_horizontal = Vector3(velocity.x, 0, velocity.z)
	var current_speed = current_horizontal.length()
	
	if current_speed > reduction:
		var reduction_factor = max(0.1, (current_speed - reduction) / current_speed)
		velocity.x *= reduction_factor
		velocity.z *= reduction_factor
		print("‚¨áÔ∏è Speed boost expired: %.1f ‚Üí %.1f" % [
			current_speed, Vector3(velocity.x, 0, velocity.z).length()
		])

# === –°–û–ë–´–¢–ò–Ø –î–õ–Ø –ò–ù–¢–ï–ì–†–ê–¶–ò–ò –° –î–†–£–ì–ò–ú–ò –°–ò–°–¢–ï–ú–ê–ú–ò ===
signal momentum_gained(speed: float, jumps: int)
@warning_ignore("unused_signal")
signal perfect_landing_achieved(speed_bonus: float)
signal speed_threshold_reached(speed: float, threshold_name: String)

func _emit_momentum_events() -> void:
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø—Ä–∏ –∑–Ω–∞—á–∏—Ç–µ–ª—å–Ω—ã—Ö –∏–∑–º–µ–Ω–µ–Ω–∏—è—Ö —Å–∫–æ—Ä–æ—Å—Ç–∏"""
	var current_speed = get_horizontal_speed()
	
	# –≠–º–∏—Ç–∏–º —Å–æ–±—ã—Ç–∏—è –¥–ª—è –¥–æ—Å—Ç–∏–∂–µ–Ω–∏—è –æ–ø—Ä–µ–¥–µ–ª–µ–Ω–Ω—ã—Ö —Å–∫–æ—Ä–æ—Å—Ç–µ–π
	if current_speed > sprint_speed * 1.5 and consecutive_jumps >= 3:
		momentum_gained.emit(current_speed, consecutive_jumps)
	
	# –ü–æ—Ä–æ–≥–∏ —Å–∫–æ—Ä–æ—Å—Ç–∏ –¥–ª—è –¥–æ—Å—Ç–∏–∂–µ–Ω–∏–π/—ç—Ñ—Ñ–µ–∫—Ç–æ–≤
	if current_speed > max_bunny_speed * 0.8:
		speed_threshold_reached.emit(current_speed, "high_speed")
	elif current_speed > max_bunny_speed * 0.6:
		speed_threshold_reached.emit(current_speed, "medium_speed")

# === –î–û–ü–û–õ–ù–ò–¢–ï–õ–¨–ù–´–ï –£–¢–ò–õ–ò–¢–´ ===
func is_bunny_hopping() -> bool:
	"""–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –∞–∫—Ç–∏–≤–Ω–æ –ª–∏ bunny hopping"""
	return bunny_hop_enabled and consecutive_jumps >= 2 and get_horizontal_speed() > sprint_speed * 1.2

func get_movement_style() -> String:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–µ–∫—É—â–∏–π —Å—Ç–∏–ª—å –¥–≤–∏–∂–µ–Ω–∏—è –¥–ª—è UI/—Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏"""
	if is_sliding:
		return "sliding"
	elif is_bunny_hopping():
		return "bunny_hopping"
	elif not is_on_floor() and air_time > 0.5:
		return "air_strafing"
	elif is_sprinting:
		return "sprinting"
	elif is_crouching:
		return "crouching"
	else:
		return "walking"

func get_speed_rating() -> String:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ä–µ–π—Ç–∏–Ω–≥ —Ç–µ–∫—É—â–µ–π —Å–∫–æ—Ä–æ—Å—Ç–∏"""
	var speed_percent = (get_horizontal_speed() / max_bunny_speed) * 100.0
	
	if speed_percent >= 90:
		return "INSANE"
	elif speed_percent >= 75:
		return "EXTREME"
	elif speed_percent >= 60:
		return "HIGH"
	elif speed_percent >= 40:
		return "MEDIUM"
	elif speed_percent >= 20:
		return "LOW"
	else:
		return "SLOW"

func get_current_lean() -> float:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–µ–∫—É—â–∏–π —É–≥–æ–ª lean –¥–ª—è –∫–∞–º–µ—Ä—ã"""
	return current_lean

func _horizontal_speed() -> float:
	return Vector3(velocity.x, 0.0, velocity.z).length()
